assets/styles/base.css
/* ... */
#header .contextual-navbar .dropdown > li:hover .arrow {
	background: url("/images/shared/markitup/icon-nav-open.png") no-repeat 47% 48% white;
	box-shadow: -1px 0px 0px 0px #D1D1D1, 1px 0px 0px #D1D1D1;
}

/**
 *content
 */

.content-wrapp {
	padding-bottom: 150px;
}

#content {
	background: #FFF;
	clear: both;
	margin: 0 auto 50px auto;
	overflow: hidden;
	position: relative;
	width: 940px;
}

#content .slide-elem {
	width: 940px;
	float: left;
	position: relative;
}

#content .page-heading {
	height: 120px;
}

#content h1 {
	border-top: 11px solid #DBDBDB;
	color: #B5B5B5;
	font: lighter 48px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
	height: 60px;
	overflow: hidden;
	letter-spacing: -1px;
	text-transform: lowercase;
}

/**
 *error flash
 */
#success-feedback, #error-feedback {
	background: #278740 url(/images/shared/layout/feedback-close.png) 900px 26px no-repeat;
	color: #FFF;
	display: block;
	font: lighter 20px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
	margin: 0 auto;
	margin-bottom: 30px;
	padding: 20px 25px;
	text-decoration: none;
	width: 890px;
}

#success-feedback:hover {
	background-color: #227738;
}

#error-feedback {
	background-color: #ed0d0d;
}

#error-feedback:hover {
	background-color: #be0a0a;
}

/**
 *file upload
 */
.picture-upload-container {
	border-radius: 4px;
	position: relative;
	float: left;
	height: 138px;
	margin: 0 0 50px 20px;
	width: 138px;
	background-color: #FFF;
	border: 1px solid #CCC;
	font-size: 15px;
	color: #707070;
	background-position: center center;
	background-repeat: no-repeat;
}

.picture-upload-container.first {
	margin-left: 0;
}

.picture-upload-container input[type="file"] {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	opacity: 0;
	z-index: 1;
}

.picture-upload-container .text {
	position: absolute;
	z-index: 2;
	cursor: text;
	top: 100%;
	width: 126px;
	margin: 5px 0 0;
}

.picture-upload-container .text input {
	max-width: 100%;
	display: none;
}

.picture-upload-container.done .text input {
	display: block;
}

.picture-upload-container .text:hover {
	cursor: text;
}

.picture-upload-container .text {
	cursor: text;
}

.picture-upload-container iframe {
	display: none;
}

.picture-upload-container .default, .picture-upload-container .wait {
	display: block;
	position: absolute;
	top: 50%;
	padding-top: 0px;
	margin-top: -32px;
	text-align: center;
	background-position: center top;
	background-repeat: no-repeat;
	width: 100%;
}

.picture-upload-container .default {
	display: block;
}

.picture-upload-container .default .icon_upload {
	width: 54px;
	height: 38px;
	background: url('/images/shared/register/bt_upload_picture.png') #42537e;
	margin: auto auto 5px auto;
}

.picture-upload-container .wait {
	display: none;
}

.picture-upload-container .close {
	display: none;
	cursor: pointer;
	position: absolute;
	right: -9px;
	top: -9px;
	width: 19px;
	height: 19px;
	background: url('/images/shared/register/close_upload.png') no-repeat 0 0;
}

.picture-upload-container.wait .default {
	display: none;
}

.picture-upload-container.wait .wait {
	display: block;
}

.picture-upload-container.done .wait, .picture-upload-container.done .default {
	display: none;
}

.picture-upload-container.done .close {
	display: block;
}

.picture-upload-container + .duplicate-previous {
	display: none;
}

/* footer */

.footer {
	background: #444444;
	color: #ACACAC;
	padding: 30px 0;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 14px;
	line-height: 20px;
	position: absolute;
	width: 100%;
	left: 0;
	bottom: 0;
}

.footer p {
	margin: 0 0 10px;
}

.footer a {
	text-decoration: none;
}

.footer a:hover {
	text-decoration: underline;
}

.footer .container {
	overflow: hidden;
}

.footer .upper {
	text-transform: uppercase;
	font-size: 11px;
}

.footer .links, .footer .contact, .footer .social {
	float: left;
	width: 33%;
}

.footer .links {
	width: 280px;
}

.footer .links a {
	color: inherit;
	text-transform: uppercase;
	font-size: 11px;
	margin: 0 5px;
	float: left;
}

.footer .copy {
	font-size: 11px;
	color: #888;
	margin-top: 40px;
}

.footer .copy .border {
	display: block;
	width: 63px;
	border-top: 1px solid;
	margin: 20px 0 15px;
}

.footer a.logo {
	width: 125px;
	height: 20px;
	margin-left: 0;
	text-indent: -99px;
	background: url("/images/home/logo-mini.png") no-repeat 0 0;
	display: inline-block;
	overflow: hidden;
}

.footer .contact {
	width: 25%;
}

.footer .contact > div {
	padding-top: 1px;
}

.footer .contact p {
	font-size: 11px;
	margin: 0;
	line-height: 18px;
}

.footer .contact p span {
	display: block;
	font-size: 13px;
	font-weight: normal;
}

.footer .social {
	text-align: right;
	float: right;
}

.footer .social a {
	color: inherit;
	display: inline-block;
	padding: 0px 0 4px 30px;
	margin-left: 20px;
}

.footer .social a.face {
	background: url("/images/shared/home/facebook.png") no-repeat 0 0;
	margin-left: 5px;
}

.footer .social a.twitter {
	background: url("/images/shared/home/twitter.png") no-repeat 0 0;
}

.support {
	position: fixed;
	top: 390px;
	left: -26px;
	overflow: hidden;
	-webkit-border-radius: 0 0 3px 3px;
	-moz-border-radius: 0 0 3px 3px;
	text-decoration: none;
	background: #2E3A58;
	/* Safari */
	-webkit-transform: rotate(-90deg);
	/* Firefox */
	-moz-transform: rotate(-90deg);
	/* IE */
	-ms-transform: rotate(-90deg);
	/* Opera */
	-o-transform: rotate(-90deg);
	/* Internet Explorer */
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}

.support a {
	color: white;
	text-decoration: none;
	display: block;
	padding: 12px 14px;
	font-size: 13px;
	font-weight: bold;
	letter-spacing: 0px;
	text-transform: uppercase;
}
/* ... */

